--- a/webMetics/Views/Asesor/AgregarAsesor.cshtml
+++ b/webMetics/Views/Asesor/AgregarAsesor.cshtml
@@ -6,120 +6,128 @@
 -->
 
 @{
-    ViewBag.Title = "Crear asesor";
-}
-<!DOCTYPE html>
+    ViewBag.Title = "Agregar asesor";
 
-<html>
-<head>
-</head>
-<body>
-    @if (ViewBag.Id != "" && ViewBag.Role == 1)
-    {
-        using (Html.BeginForm("CrearAsesor", "Asesor", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
+}
+
+@if (ViewBag.Id != "" && ViewBag.Role == 1)
+{
+    <div class="contenedor-tipos-actividades container-fluid">
+        @if (urlReferrer != null)
+        {
+            <div class="d-flex justify-content-start mb-3">
+                <a class="text-dark fs-4" onclick="history.go(-1); return false;" href="#">
+                    <i class="bi bi-arrow-left"></i>
+                </a>
+            </div>
+        }
+
+        @using (Html.BeginForm("CrearAsesor", "Asesor", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
-            <div class="form-horizontal">
-                <h1 class="mt-5">Crear asesor</h1>
-                <h5>Inserte los siguientes datos:</h5>
-                <h5 class="alertaCrearAsesor">@Html.Raw(TempData["msg"])</h5>
-                <hr />
+            <h1>@ViewBag.Title</h1>
+            <hr />
 
-                @if (ViewBag.Message != null)
+            @if (ViewBag.Message != null)
+            {
+                if (ViewBag.ExitoAlCrear != null)
                 {
-                    if (ViewBag.ExitoAlCrear != null)
-                    {
-                        <div class="alert alert-success alert-dismissible fade show mt-4" role="alert">
-                            @ViewBag.Message
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="alert alert-dark alert-dismissible fade show mt-4" role="alert">
-                            @ViewBag.Message
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    }
+                    <div class="alert alert-success alert-dismissible fade show mt-4" role="alert">
+                        @ViewBag.Message
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
                 }
-                <div class="row mt-1" style="margin-bottom:10%">
-                    <div class="col">
-                        <div class="form-group">
+                else
+                {
+                    <div class="alert alert-dark alert-dismissible fade show mt-4" role="alert">
+                        @ViewBag.Message
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                }
+            }
+
+            if (ViewBag.ErrorMessage != null)
+            {
+                <div class="alert alert-dark alert-dismissible fade show mx-2" role="alert">
+                    <span>@ViewBag.ErrorMessage</span>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+            if (ViewBag.SuccessMessage != null)
+            {
+                <div class="alert alert-success alert-dismissible fade show mx-2" role="alert">
+                    <span>@ViewBag.SuccessMessage</span>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+
+            <div class="row mb-1">
+                <div class="col">
+                    <div class="container">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.identificacion, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.identificacion, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.identificacion, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.nombre, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.nombre, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.nombre, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.apellido1, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.apellido1, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.apellido1, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.apellido2, new { Style = "font-size:22px" })
                             @Html.TextBoxFor(asesorModel => asesorModel.apellido2, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.apellido2, "", new { @class = "text-danger", @maxlength = "64" })
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.temaAsociado, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
                             @Html.DropDownList("temaAsociado", ViewData["Temas"] as List<SelectListItem>, "Seleccione un tema asociado...", new { @class = "form-select", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.temaAsociado, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.asistentesAsociados, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.asistentesAsociados, new { @class = "form-control", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.asistentesAsociados, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.telefonos, new { Style = "font-size:22px" })  <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(asesorModel => asesorModel.telefonos, new { @class = "form-control", @maxlength = "12", @minlength = "7", @autocomplete = "off" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.telefonos, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mt-1">
                             @Html.LabelFor(asesorModel => asesorModel.descripcion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                             @Html.TextAreaFor(asesorModel => asesorModel.descripcion, new { @class = "form-control", @rows = "3", @maxlength = "256" })
                             @Html.ValidationMessageFor(asesorModel => asesorModel.descripcion, "", new { @class = "text-danger" })
 
                         </div>
-                    </div>
-                    <div class="row justify-content-center m-4">
-                        <div class="col-auto">
-                            @Html.ActionLink("Cancelar", "ListaAsesores", "Asesor", new { }, new { @class = "btn btn-secondary btn-block"} )
-                        </div>
-                        <div class="col-auto">
-                            <input type="submit" class="btn btn-primary btn-block" value="Guardar"/>
+                        <div class="row justify-content-center m-4">
+                            <div class="col-auto">
+                                <a href="#" class="btn btn-secondary btn-block" onclick="history.go(-1); return false;">Cancelar</a>
+                            </div>
+                            <div class="col-auto">
+                                <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         }
-    }
-    else
-    {
-        await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
-    }
-</body>
-</html>
-
-<script src="https://code.jquery.com/jquery-migrate-3.0.1.js"></script>
-
-<script type="text/javascript">
-    $(function () {
-        $("form").submit(function () {
-            if ($(this).valid()) {
-                $("#loading").show();
-            }
-        });
-    });
-</script>
+    </div>
+}
+else
+{
+    await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+}
